@@ -29,8 +29,11 @@ using System.IO;
 using System.Linq;
 using System.Text;
 using NUnit.Framework;
+using VDS.RDF.Nodes;
 using VDS.RDF.Parsing;
+using VDS.RDF.Parsing.Tokens;
 using VDS.RDF.Query;
+using VDS.RDF.Query.Expressions;
 using VDS.RDF.Query.Patterns;
 using VDS.RDF.Query.Expressions.Primary;
 using VDS.RDF.Update;
@@ -104,49 +107,56 @@ namespace VDS.RDF.Query
         [Test]
         public void SparqlParsingSetExpression2()
         {
-            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA + "> SELECT * WHERE { ?s ?p ?o . FILTER(xsd:integer(?o) IN (1, 2, 3)) }";
+            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA +
+                           "> SELECT * WHERE { ?s ?p ?o . FILTER(xsd:integer(?o) IN (1, 2, 3)) }";
             TestQuery(query);
         }
 
         [Test]
         public void SparqlParsingSetExpression3()
         {
-            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA + "> SELECT * WHERE { ?s ?p ?o . FILTER(xsd:integer(?o) NOT IN (1, 2, 3)) }";
+            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA +
+                           "> SELECT * WHERE { ?s ?p ?o . FILTER(xsd:integer(?o) NOT IN (1, 2, 3)) }";
             TestQuery(query);
         }
 
         [Test]
         public void SparqlParsingSetExpression4()
         {
-            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA + "> SELECT * WHERE { ?s ?p ?o . FILTER(1 + 3 IN (1, 2, 3)) }";
+            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA +
+                           "> SELECT * WHERE { ?s ?p ?o . FILTER(1 + 3 IN (1, 2, 3)) }";
             TestQuery(query);
         }
 
         [Test]
         public void SparqlParsingNumericExpression1()
         {
-            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA + "> SELECT * WHERE { ?s ?p ?o . FILTER(1 + '3'^^xsd:long) }";
+            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA +
+                           "> SELECT * WHERE { ?s ?p ?o . FILTER(1 + '3'^^xsd:long) }";
             TestQuery(query);
         }
 
         [Test]
         public void SparqlParsingNumericExpression2()
         {
-            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA + "> SELECT * WHERE { ?s ?p ?o . FILTER(1 + '3'^^xsd:short) }";
+            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA +
+                           "> SELECT * WHERE { ?s ?p ?o . FILTER(1 + '3'^^xsd:short) }";
             TestQuery(query);
         }
 
         [Test]
         public void SparqlParsingNumericExpression3()
         {
-            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA + "> SELECT * WHERE { ?s ?p ?o . FILTER(1 + '3'^^xsd:byte) }";
+            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA +
+                           "> SELECT * WHERE { ?s ?p ?o . FILTER(1 + '3'^^xsd:byte) }";
             TestQuery(query);
         }
 
         [Test]
         public void SparqlParsingNumericExpression4()
         {
-            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA + "> SELECT * WHERE { ?s ?p ?o . FILTER(1 + '3'^^xsd:nonPositiveInteger) }";
+            String query = "PREFIX xsd: <" + NamespaceMapper.XMLSCHEMA +
+                           "> SELECT * WHERE { ?s ?p ?o . FILTER(1 + '3'^^xsd:nonPositiveInteger) }";
             TestQuery(query);
         }
 
@@ -174,21 +184,24 @@ namespace VDS.RDF.Query
         [Test]
         public void SparqlParsingPropertyPathsNegatedSet()
         {
-            String query = "PREFIX rdfs: <" + NamespaceMapper.RDFS + "> SELECT * WHERE { ?s !(rdfs:label|rdfs:comment) ?o }";
+            String query = "PREFIX rdfs: <" + NamespaceMapper.RDFS +
+                           "> SELECT * WHERE { ?s !(rdfs:label|rdfs:comment) ?o }";
             TestQuery(query);
         }
 
         [Test]
         public void SparqlParsingPropertyPathsNegatedSetModified()
         {
-            String query = "PREFIX rdfs: <" + NamespaceMapper.RDFS + "> SELECT * WHERE { ?s !(rdfs:label|rdfs:comment)+ ?o }";
+            String query = "PREFIX rdfs: <" + NamespaceMapper.RDFS +
+                           "> SELECT * WHERE { ?s !(rdfs:label|rdfs:comment)+ ?o }";
             TestQuery(query);
         }
 
         [Test]
         public void SparqlParsingPropertyPathsNegatedSetSimpleInAlternative()
         {
-            String query = "PREFIX rdfs: <" + NamespaceMapper.RDFS + "> SELECT * WHERE { ?s (rdfs:label|!rdfs:comment) ?o }";
+            String query = "PREFIX rdfs: <" + NamespaceMapper.RDFS +
+                           "> SELECT * WHERE { ?s (rdfs:label|!rdfs:comment) ?o }";
             TestQuery(query);
         }
 
@@ -220,11 +233,11 @@ SELECT ?X WHERE
         public void SparqlVarNames()
         {
             List<String> names = new List<String>
-            {
-                "?var",
-                "$var",
-                "var"
-            };
+                {
+                    "?var",
+                    "$var",
+                    "var"
+                };
 
             foreach (String name in names)
             {
@@ -239,18 +252,40 @@ SELECT ?X WHERE
             }
         }
 
-        [Test,ExpectedException(typeof(RdfParseException))]
+        [Test, ExpectedException(typeof (RdfParseException))]
         public void SparqlParsingInsertDataWithGraphVar()
         {
             String update = "INSERT DATA { GRAPH ?g { } }";
             SparqlUpdateCommandSet commands = this._updateParser.ParseFromString(update);
         }
 
-        [Test, ExpectedException(typeof(RdfParseException))]
+        [Test, ExpectedException(typeof (RdfParseException))]
         public void SparqlParsingDeleteDataWithGraphVar()
         {
             String update = "DELETE DATA { GRAPH ?g { } }";
             SparqlUpdateCommandSet commands = this._updateParser.ParseFromString(update);
+        }
+
+        [Test]
+        public void SparqlParsingLiteralsInExpressions()
+        {
+            Queue<IToken> tokens = new Queue<IToken>();
+            tokens.Enqueue(new LiteralToken("value", 0, 0, 0));
+            tokens.Enqueue(new HatHatToken(0, 0));
+            tokens.Enqueue(new DataTypeToken("<http://example/type>", 0, 0, 0));
+
+            SparqlExpressionParser parser = new SparqlExpressionParser();
+            ISparqlExpression expr = parser.Parse(tokens);
+
+            Assert.IsInstanceOf(typeof (ConstantTerm), expr);
+            ConstantTerm constant = expr as ConstantTerm;
+            Assert.IsNotNull(constant);
+
+            IValuedNode n = constant.Node;
+            Assert.IsInstanceOf(typeof(ILiteralNode), n);
+            ILiteralNode lit = (ILiteralNode) n;
+            Assert.AreEqual(String.Empty, lit.Language);
+            Assert.IsTrue(EqualityHelper.AreUrisEqual(lit.DataType, new Uri("http://example/type")));
         }
     }
 }
